@@ -14,7 +14,7 @@
 /backward_compatibility/index.php|eb18f895c85303c2ced77482ec4ab525
 /classes/models/LengowConfigurationForm.php|56239f5e6b79c802ec9bd527370f24f6
 /classes/models/LengowTool.php|52694113420e270308eb7b66c853896f
-/classes/models/LengowImportOrder.php|97266ae451dfd116b0dac78507bd8b0b
+/classes/models/LengowImportOrder.php|5daed5f254797493a6fca4d4666e0719
 /classes/models/LengowPaymentModule.php|d45945f62754580f18e27a65e7dc422d
 /classes/models/LengowMethod.php|784792585a979cc94281d204a59cf827
 /classes/models/LengowCustomer.php|9876528937cc0eb70737950a31a7d559
@@ -32,7 +32,7 @@
 /classes/models/LengowTaxRule.php|809008cc79f5fa843fa87ac67f401a1e
 /classes/models/LengowCurrency.php|f2b2f0e3b8da77da54ce4cb70a4e88c0
 /classes/models/LengowMain.php|8df78fba3e7361825b203ee1160d2712
-/classes/models/LengowLog.php|077e720becdfd998fce712ccf8918d37
+/classes/models/LengowLog.php|45d6aa3a0e6bb30fb02fc7e496d4f0b0
 /classes/models/LengowGender.php|7ca9cd51973b5304383a07cf2df7b4c4
 /classes/models/LengowOrder.php|0e151e58045f5c60294bf81064253742
 /classes/models/LengowLink.php|0409a6c1ae54d437be6751d3ca8d18be
