@@ -74,16 +74,17 @@ en:
       product_be_found: "product id %{id_full} found with field %{attribute_name} (%{attribute_value})"
       product_advanced_search: "product not found with field %{attribute_name} (%{attribute_value}). Using advanced search"
       product_state_canceled: "product %{product_id} could not be added to cart - status: %{state_product}"
+      match_carrier_found: "carrier \"%{carrier_name}\" (CARRIER ID %{id_carrier}) found with field %{field_name} (%{field_value})"
+      match_default_carrier: "no carrier matching found, carrier \"%{carrier_name}\" (CARRIER ID %{id_carrier}) selected by default"
       error_order_state_updated: "error while updating status: %{error_message}"
       error_no_package: "import order failed - Lengow error: no package in the order"
       error_wrong_package_number: "import order failed - wrong package number"
       error_no_delivery_address: "Import order failed - Lengow error: no delivery address in the order"
-      error_carrier_not_found: "carrier %{carrier_name} could not be found in your PrestaShop"
       error_mondial_relay_not_found: "relay %{id_relay} could not be found"
       error_mondial_relay_missing_file: "missing file %{ps_module_dir}mondialrelay/classes/MRRelayDetail.php"
       error_colissimo_missing_file: "missing file %{file_path}"
       error_default_carrier_not_active: "import failed - default carrier not active"
-      carrier_compatibility_ensured: "carrier compatibility ensured with carrier %{carrier_name}"
+      carrier_compatibility_ensured: "carrier compatibility ensured with carrier \"%{carrier_name}\""
       order_synchronized_with_lengow: "order successfully synchronised with Lengow webservice (ORDER ID %{order_id})"
       order_not_synchronized_with_lengow: "WARNING ! Order could NOT be synchronised with Lengow webservice (ORDER ID %{order_id})"
     order_action:
